feat: add manual failover management
